--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,9 +36,7 @@ dependencies:
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
-  cupertino_icons: ^1.0.8
   flutter_riverpod: ^2.5.1
-  flutter_launcher_icons: ^0.13.1
   isar: ^3.1.0+1
   isar_flutter_libs: ^3.1.0+1
   path_provider: ^2.1.4
@@ -57,6 +55,7 @@ dev_dependencies:
   build_runner: any
   isar_generator: ^3.1.0+1
   freezed: ^2.5.7
+  dependency_validator: ^4.1.0
 
 dependency_overrides:
   analyzer:
