--- a/android/build.gradle
+++ b/android/build.gradle
@@ -1,4 +1,5 @@
 allprojects {
+    ext.kotlin_version = '2.0.20'
     repositories {
         google()
         mavenCentral()
@@ -7,6 +8,25 @@ allprojects {
 
 rootProject.buildDir = "../build"
 subprojects {
+    //  fix for verifyReleaseResources
+    // ============
+    afterEvaluate { project ->
+        if (project.plugins.hasPlugin("com.android.application") ||
+        project.plugins.hasPlugin("com.android.library")) {
+        project.android {
+            compileSdkVersion 34
+            buildToolsVersion "34.0.0"
+        }
+        }
+        if (project.hasProperty("android")) {
+        project.android {
+            if (namespace == null) {
+            namespace project.group
+            }
+        }
+        }
+    }
+    // ============
     project.buildDir = "${rootProject.buildDir}/${project.name}"
 }
 subprojects {
