--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -56,6 +56,8 @@ dev_dependencies:
   isar_generator: ^3.1.0+1
   freezed: ^2.5.7
   dependency_validator: ^4.1.0
+  golden_toolkit: ^0.15.0
+  mockito: ^5.4.2
 
 dependency_overrides:
   analyzer:
